# request/AvatarUpdateBase64Req.go
@@ -1,0 +1,5 @@
+package request
+
+type AvatarUpdateBase64Req struct {
+	Base64 string `json:"base64"`
+}
